--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
       <link rel="stylesheet" href="css/style.css">
       <!-- Modernizr JS -->
       <script src="js/modernizr-2.6.2.min.js"></script>
-       
-       <!-----Google adsense code---->
-       <script data-ad-client="ca-pub-4767382980457301" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
    </head>
    <body>
        <canvas id="canvas"></canvas>
@@ -51,7 +48,7 @@
                         <li><a href="#" data-nav-section="software">Software</a></li>
                         <li><a href="#" data-nav-section="skills">Skills</a></li>
                         <li><a href="#" data-nav-section="experience">Work Experience</a></li>
-                        <li><a href="#" data-nav-section="academic">Academic</a></li>
+                        <li><a href="#" data-nav-section="certifications">Certifications</a></li>
                         <li><a href="#" data-nav-section="contact">Contact</a></li>
                      </ul>
                   </div>
@@ -68,22 +65,7 @@
             <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
             <!----- main page--------->
             <div id="colorlib-main">
-<!--
-               -----------------Intro-------------
-               <section class="colorlib-about" data-section="about">
-                  <div class="colorlib-narrow-content">
-                     <div class="row">
-                        <div class="col-md-12">
-                           <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-                              <div class="col-md-12" style="margin-bottom: -30px">
-                                 <p style="margin-top: 20px;">Hi there! Welcome to my portfolio page.</p>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </section>
--->
+
                <!---------------About me---------------------->
                <section class="colorlib-about" data-section="about">
                   <div class="colorlib-narrow-content">
@@ -99,59 +81,44 @@
                               </div>
                            </div>
                            <div class="row">
+
+
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <div class="hovereffect">
-                                    <img class="img-responsive" src="" alt="">
-                                       <div class="overlay">
-                                          <h2>Effect 13</h2>
-                                             <p><a href="#" data-nav-section="language">Program Languages</a> </p>
-                                       </div>
-                                 </div>
-                                 <a href="cp.html" target="_blank">
-                                    <div class="services color-5">
-                                       <span class="icon2"><i class="fa fa-desktop"></i></span>
-                                       <h3>Programming<br> Profile</h3>
+                                    <div class="hovereffect">
+                                       <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/en/0/00/The_Child_aka_Baby_Yoda_%28Star_Wars%29.jpg" alt="" >
+                                          <div class="overlay">
+                                             <h2>Academic</h2>
+				                             <p><a href="cp.html" target="_blank">Academic</a></p>
+                                          </div>
                                     </div>
-                                 </a>
+                              </div>
+
+
+                              <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                                    <div class="hovereffect">
+                                       <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/en/0/00/The_Child_aka_Baby_Yoda_%28Star_Wars%29.jpg" alt="" >
+                                          <div class="overlay">
+                                             <h2>Volunteer</h2>
+				                             <p><a href="cp.html" target="_blank">Volunteer</a></p>
+                                          </div>
+                                    </div>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="webdev.html" target="_blank">
-                                    <div class="services color-2">
-                                       <span class="icon2"><i class="fa fa-code"></i></span>
-                                       <h3>Web<br> Designing</h3>
+                                    <div class="hovereffect">
+                                       <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/en/0/00/The_Child_aka_Baby_Yoda_%28Star_Wars%29.jpg" alt="" >
+                                          <div class="overlay">
+                                             <h2>Interests</h2>
+				                             <p><a href="cp.html" target="_blank">Interests</a></p>
+                                          </div>
                                     </div>
-                                 </a>
                               </div>
-                              <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="software.html" target="_blank">
-                                    <div class="services color-3">
-                                       <span class="icon2"><i class="fa fa-terminal"></i></span>
-                                       <h3>Software Development</h3>
-                                    </div>
-                                 </a>
-                              </div>
-                              <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="android.html" target="_blank">
-                                    <div class="services color-4">
-                                       <span class="icon2"><i class="fa fa-android"></i></span>
-                                       <h3>Android Applications</h3>
-                                    </div>
-                                 </a>
-                              </div>
-                              <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="ml.html" target="_blank">
-                                    <div class="services color-1">
-                                       <span class="icon2"><i class="fa fa-user"></i></span>
-                                       <h3>Machine Learning</h3>
-                                    </div>
-                                 </a>
-                              </div>
+
                            </div>
+                                          <br><br>
                            <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
                                     <h2>"Baseball is a soap opera that lends itself to probabilistic thinking." <span style="...">- Micheal Lewis</span></h2>
-<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                                  </div>
                               </div>
                            </div>
@@ -165,9 +132,8 @@
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-                           <!--	<span class="heading-meta">My Specialty</span> -->
                             <div class="about-desc">
-                           <h1>Languages</h1>
+                           <h1>Program Languages</h1>
                            <hr>
                             </div>
                         </div>
@@ -276,6 +242,7 @@
                      </div>
                       </div>
                </section>
+               <br><br>
                <!------Software---------------->
                <section class="colorlib-software" data-section="software">
                   <div class="colorlib-narrow-content">
@@ -289,24 +256,38 @@
                         </div>
                      </div>
                </section>
+               <br><br>
                <!------Skills---------------->
                <section class="colorlib-skills" data-section="skills">
-                  <div class="colorlib-narrow-content">
+	              <div class="colorlib-narrow-content">
                      <div class="row">
-                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-                           <!--	<span class="heading-meta">My Specialty</span> -->
-                            <div class="about-desc">
-                           <h1>Skills</h1>
+                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInRight">
+                           <div class="about-desc">
+                            <h1>Skills</h1>
                            <hr>
                             </div>
                         </div>
                      </div>
+		             <div class="row">
+                        <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                           <div class="services color-5">
+                              <h3>Insert<br>Skill</h3>
+                           </div>
+                        </div>
+                        <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                           <div class="services color-2">
+                              <span class="icon2"><i class="fa fa-code"></i></span>
+                              <h3>Insert<br>Skill</h3>
+                           </div>
+                        </div>
+                     </div>
+	              </div>
                </section>
                <!--------------Work Experience----------->
                <section class="colorlib-experience" data-section="experience">
                   <div class="colorlib-narrow-content">
                      <div class="row">
-                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInRight">
                            <div class="about-desc">
                             <h1>Work Experience</h1>
                            <hr>
@@ -316,20 +297,6 @@
                      <div class="row">
                         <div class="col-md-12">
                            <div class="timeline-centered">
-<!--
-                              <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
-                                 <div class="timeline-entry-inner">
-                                    <div class="timeline-icon color-5">
-                                       <i class="fa fa-user"></i>
-                                    </div>
-                                    <div class="timeline-label">
-                                       <h2><a href="#">Geeksforgeeks</a> <span>July 2019 - Present</span></h2>
-                                       <p><strong><a href="https://auth.geeksforgeeks.org/user/somawatvinay/profile">Campus Ambassador</a></strong><br> To engage in outreach to students at the campus about Geeksforgeeks’s study content, courses, opportunities, and to support all campus workshops by Geeksforgeeks.</p>
-                                       <p></p>
-                                    </div>
-                                 </div>
-                              </article>
--->
                               <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-1">
@@ -364,14 +331,14 @@
                      </div>
                   </div>
                </section>
-               <!------Academic---------------->
-               <section class="colorlib-academic" data-section="academic">
+               <br><br>
+               <!------Certifications---------------->
+               <section class="colorlib-certifications" data-section="certifications">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-                           <!--	<span class="heading-meta">My Specialty</span> -->
                             <div class="about-desc">
-                           <h1>Academic</h1>
+                           <h1>Certifications</h1>
                            <hr>
                             </div>
                         </div>
@@ -389,28 +356,16 @@
                                </div>
                               <p>Feel free to contact me with any questions! <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">Aaron K Bakker at Outlook</a></strong></p>
                            </div>
-                        </div>
-                     </div>
-                  </div>
-               </section>
-               <!------------Footer------------->
-               <section class="colorlib-footer" data-section="footer">
-                  <div class="colorlib-narrow-content">
-                     <div class="row">
-                        <div class="col-md-12">
-                           <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-                              <div class="hire">
+                           <div class="hire">
                                  <div align=center>
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-                                    <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://www.linkedin.com/in/aaron-bakker166" style="color: black;" class="fa fa-linkedin"</a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://scholar.google.com/citations?hl=en&user=ng-4XxAAAAAJ" style="color: black;" class="fa fa-graduation-cap"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.researchgate.net/profile/Aaron_Bakker" style="color: black;" class="fa fa-researchgate"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://github.com/aaronbakker" style="color: black;" class="fa fa-github"></a>
+                                    <p style="font-size: 30px; margin-bottom: 0px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/aaron-bakker166" style="color: white;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://github.com/aaronbakker" style="color: white;" class="fa fa-github"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://scholar.google.com/citations?hl=en&user=ng-4XxAAAAAJ" style="color: white;" class="fa fa-graduation-cap"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                     </p>
                                  </div>
                                  <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights</strong></p>
                               </div>
-                           </div>
                         </div>
                      </div>
                   </div>
